--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,34 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>*</members>
-		<name>GlobalValueSet</name>
-	</types>
-	<types>
-		<members>Projects__c.Project_Compact_Layout</members>
-		<members>Milestones__c.Milestone_Compact_Layout</members>
-		<name>CompactLayout</name>
-	</types>
-	<types>
-		<members>Project_Status_Path</members>
-		<members>Milestone_Status_Path</members>
-		<name>PathAssistant</name>
-	</types>
-	<types>
-		<members>approvalManagementForm</members>
-		<members>milestoneManagmentForm</members>
-		<members>progressBar</members>
-		<members>projectManagementForm</members>
-		<members>tasksManagementForm</members>
-		<name>LightningComponentBundle</name>
-	</types>
-	<types>
+		<members>MilestoneController</members>
+		<members>MilestoneControllerTest</members>
+		<members>MilestoneTriggerHandler</members>
 		<members>MilestoneWrapper</members>
+		<members>ProjectCreationController</members>
 		<members>ProjectMilestoneTaskProcessor</members>
 		<members>ProjectMilestoneTaskProcessorTest</members>
 		<members>ProjectWrapper</members>
 		<members>TaskWrapper</members>
 		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>Milestones__c.Milestone_Compact_Layout</members>
+		<members>Projects__c.Project_Compact_Layout</members>
+		<name>CompactLayout</name>
 	</types>
 	<types>
 		<members>image_branding</members>
@@ -58,10 +45,22 @@
 		<name>FlexiPage</name>
 	</types>
 	<types>
+		<members>GlobalStatusValue</members>
+		<name>GlobalValueSet</name>
+	</types>
+	<types>
 		<members>Milestones__c-Milestone Layout</members>
 		<members>Projects__c-Project Layout</members>
 		<members>Task-Project Task Layout</members>
 		<name>Layout</name>
+	</types>
+	<types>
+		<members>approvalManagementForm</members>
+		<members>milestoneManagmentForm</members>
+		<members>progressBar</members>
+		<members>projectManagementForm</members>
+		<members>tasksManagementForm</members>
+		<name>LightningComponentBundle</name>
 	</types>
 	<types>
 		<members>Projects__c.All</members>
@@ -69,6 +68,11 @@
 		<members>Projects__c.New_Projects</members>
 		<members>Projects__c.On_going_Projects</members>
 		<name>ListView</name>
+	</types>
+	<types>
+		<members>Milestone_Status_Path</members>
+		<members>Project_Status_Path</members>
+		<name>PathAssistant</name>
 	</types>
 	<version>63.0</version>
 </Package>
